fix mines counter ui on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -105,3 +105,16 @@ h1 {
   transition: 0.6s ease-out;
   opacity: 0.1;
 }
+
+.mines-counter {
+  color: antiquewhite;
+  font-size: 20px;
+  position: absolute;
+  top: 22%;
+  margin-left: 10px;
+}
+
+.mines-counter-container {
+  position: relative;
+  margin-left: 15px;
+}
